--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "mysql": "2.18.1",
+    "mysql2": "^3.5.2",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.1.1",
     "sendgrid": "^5.2.3",
