--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,21 @@ CLOUDINARY_KEY=""
 CLOUDINARY_NAME=""
 CLOUDINARY_SECRET=""
 DATABASE_CLIENT=""
+JWT_SECRET=""
+TRANSFER_TOKEN_SALT=""
+test=""
+TZ=""
+STRAPI_ADMIN_API_TOKEN=""
+SECRET_TEST_KEY=""
+PUBLISH_TEST_KEY=""
+PUBLISH_KEY=""
+SECRET_KEY=""
+SENDGRID_API_KEY=""
+TAP_SECRET_KEY=""
+IMILE_API_KEY=""
+IMILE_CUSTOMER_ID=""
+SMTP_USERNAME=""
+SMTP_PASSWORD=""
 DATABASE_HOST=""
 DATABASE_NAME=""
 DATABASE_PASSWORD=""
@@ -12,13 +27,3 @@ DATABASE_PORT=""
 DATABASE_SSL=""
 DATABASE_URL=""
 DATABASE_USERNAME=""
-JWT_SECRET=""
-TRANSFER_TOKEN_SALT=""
-test=""
-TZ=""
-STRAPI_ADMIN_API_TOKEN=""
-STRIPE_TEST_KEY=""
-PUBLISH_TEST_KEY=""
-PUBLISH_KEY=""
-SECRET_KEY=""
-SENDGRID_API_KEY=""
