--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@strapi/strapi": "4.11.2",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "easyinvoice": "^3.0.23",
     "mysql": "2.18.1",
     "mysql2": "^3.5.2",
     "node-fetch": "^2.6.1",
